# libgdom3

./: Makefile.am  configure.ac  gdom3-1.0.pc.in  gdom3.spec
gee/: Makefile.am
gee/gee/: Makefile.am
gee/tests/: Makefile.am
src/: Makefile.am  dom-document.vala  patch.sh
tests/: Makefile.am
